--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.8",
     "framer-motion": "^10.12.18",
+    "js-cookie": "^3.0.5",
     "ky": "^0.33.3",
     "next": "13.4.8",
     "next-router": "^1.3.6",
