--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,9 +19,11 @@
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.8",
     "framer-motion": "^10.12.18",
+    "i18next": "^23.2.8",
     "js-cookie": "^3.0.5",
     "ky": "^0.33.3",
     "next": "13.4.8",
+    "next-i18next": "^14.0.0",
     "next-router": "^1.3.6",
     "next-routes": "^1.4.2",
     "react": "18.2.0",
