--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,8 @@
     "eslint-config-next": "13.4.8",
     "framer-motion": "^10.12.18",
     "i18next": "^23.2.8",
+    "i18next-browser-languagedetector": "^7.1.0",
+    "i18next-http-backend": "^2.2.1",
     "js-cookie": "^3.0.5",
     "ky": "^0.33.3",
     "next": "13.4.8",
@@ -28,6 +30,7 @@
     "next-routes": "^1.4.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-i18next": "^13.0.2",
     "react-icons": "^4.10.1",
     "sass": "^1.63.6",
     "typescript": "5.1.6"
