--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "i18next-http-backend": "^2.2.1",
     "js-cookie": "^3.0.5",
     "ky": "^0.33.3",
+    "multer": "^1.4.5-lts.1",
     "next": "13.4.8",
     "next-i18next": "^14.0.0",
     "next-router": "^1.3.6",
